# K8sInterpreter

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.ghcr.yml  docker-compose.yml  garage.toml  justfile  mypy.ini  pyproject.toml  requirements.txt  ruff.toml  ty.toml
.github/workflows/: docker-build-reusable.yml  docker-publish.yml  docker-retag-reusable.yml  execution-env-publish.yml  helm-publish.yml  lint.yml
dashboard/static/css/: style.css
dashboard/static/js/: app.js
docker/: seccomp-sandbox.json  security-profiles.json
docker/sidecar/: Dockerfile  main.py  requirements.txt
docs/: ARCHITECTURE.md  CONFIGURATION.md  DEVELOPMENT.md  METRICS.md  PERFORMANCE.md  PROGRAMMATIC_TOOL_CALLING.md  SECURITY.md  STATE_PERSISTENCE.md  TESTING.md
helm-deployments/k8sinterpreter/: Chart.yaml  values.yaml
helm-deployments/k8sinterpreter/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  executor-serviceaccount.yaml  ingress.yaml  networkpolicy.yaml  rolebinding.yaml  secret.yaml  secretproviderclass.yaml  service.yaml  serviceaccount.yaml
helm-deployments/librecodeinterpreter/: Chart.yaml  values.yaml
helm-deployments/librecodeinterpreter/templates/: _helpers.tpl  cleanup-job.yaml  configmap.yaml  deployment.yaml  executor-serviceaccount.yaml  ingress.yaml  networkpolicy.yaml  role.yaml  rolebinding.yaml  secret.yaml  secretproviderclass.yaml  service.yaml  serviceaccount.yaml
scripts/: perf_test.py
scripts/load_test/: __init__.py
src/: main.py
src/api/: admin.py  dashboard_metrics.py  files.py  health.py
src/config/: __init__.py  api.py  docker.py  kubernetes.py  languages.py  logging.py  minio.py  redis.py  resources.py  security.py
src/dependencies/: services.py
src/middleware/: security.py
src/models/: api_key.py  metrics.py  pool.py  session.py
src/services/: __init__.py  api_key_manager.py  auth.py  cleanup.py  file.py  health.py  interfaces.py  orchestrator.py  sqlite_metrics.py  state_archival.py
src/services/container/: manager.py
src/services/execution/: __init__.py  output.py  runner.py
src/services/kubernetes/: __init__.py  client.py  job_executor.py  (+3 more)
src/utils/: __init__.py  config_validator.py  error_handlers.py  logging.py
tests/: conftest.py
tests/integration/: test_api_contracts.py  test_auth_integration.py  test_container_behavior.py  test_container_hardening.py  test_exec_api.py  test_file_api.py  test_file_handling.py  test_librechat_compat.py  test_security_integration.py  test_session_behavior.py  test_state_api.py
tests/unit/: test_minio_config.py  test_output_processor.py  test_session_service.py  test_state_service.py
