[project]
name = "k8s-interpreter"
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiohttp>=3.13.2",
    "aiosqlite>=0.22.1",
    "docker>=7.1.0",
    "fastapi>=0.127.1",
    "httpx>=0.27.2",
    "kubernetes>=34.1.0",
    "minio>=7.2.15",
    "psutil>=5.9.6",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.5.0",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.21",
    "redis>=5.1.0",
    "requests>=2.32.4",
    "requests-unixsocket>=0.3.0",
    "structlog>=23.2.0",
    "unidecode>=1.3.8",
    "uvicorn[standard]>=0.30.6",
]

[dependency-groups]
dev = [
    "locust>=2.43.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.14.10",
    "ty>=0.0.8",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/_version.py"
